# Mspr

./: README.md  pyproject.toml
dashboards/: home.py
dashboards/pages/: 1_Vue_Usine.py  2_IA_Predictif.py  3_Alertes.py  4_Qualite_Donnees.py
data/raw/: ai4i2020.csv.dvc
notebooks/: 01_exploration_donnees.ipynb  01bis_tests_statistiques.ipynb  02_ingestion_bronze.ipynb  03_qualite_donnees.ipynb  04_kpis_metiers.ipynb  05_entrepot_etoile.ipynb  06_feature_engineering.ipynb  07_machine_learning.ipynb  08_alertes.ipynb
reports/livrables/: 01_Note_de_Cadrage.docx  02_Analyse_des_Risques.docx  03_Dossier_de_Veille.docx  04_Benchmark_Solutions.docx  05_Audit_Donnees.docx  06_Note_de_Faisabilite.docx
