[project]
name = "mspr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "dvc>=3.67.1",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "mlflow>=2.17,<3.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2,<3.0",
    "pandera>=0.31.1",
    "pip>=26.0.1",
    "plotly>=6.7.0",
    "pyarrow>=15.0,<18.0",
    "pydantic>=2.13.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "typer>=0.24.1",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "seaborn>=0.13.2",
]
